--- a/_config.yml
+++ b/_config.yml
@@ -13,14 +13,14 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Mycroft's musings ...
-email: koko@example.com
-description: I am lazy!
+title: Make a change...
+email: MrPIvanov1117@gmail.com
+description: Getting better!
 destination: docs
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: kdankov
-github_username:  kdankov
+twitter_username: 
+github_username: MrPIvanov
 
 # Build settings
 future: true
